--- a/mini_projet_data_analysis.ipynb
+++ b/mini_projet_data_analysis.ipynb
@@ -1,18 +1,99 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "bc050a43",
+   "metadata": {},
+   "source": [
+    "==============================================================================\n",
+    "Mini Projet - Analyse de données du Burkina Faso\n",
+    "==============================================================================\n",
+    "  Ce script Python réalise toutes les étapes de l'exercice :\n",
+    " 1. Prétraitement et filtrage d'un fichier Geonames.org pour le Burkina Faso.\n",
+    " 2. Analyse et extraction de sous-ensembles de données.\n",
+    " 3. Consolidation des résultats dans un fichier Excel.\n",
+    "\n",
+    "Étape 1 : Configuration, vérification et importation des bibliothèques\n",
+    "Ce bloc de code assure que toutes les bibliothèques requises sont installées.\n",
+    "L'importation de 'os' est faite en premier pour pouvoir utiliser 'os.system'."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "b90c4b44",
+   "execution_count": 26,
+   "id": "ca4cf47a",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Bibliothèques importées avec succès.\n",
-      "--------------------------------------------------\n",
-      "Lecture du fichier BF/BF.txt...\n",
+      "Vérification des bibliothèques requises...\n",
+      "Toutes les bibliothèques requises sont installées et prêtes à être utilisées.\n",
+      "--------------------------------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import sys\n",
+    "\n",
+    "# La liste des bibliothèques requises\n",
+    "required_libraries = ['pandas', 'requests', 'openpyxl']\n",
+    "installed_libraries = []\n",
+    "\n",
+    "print(\"Vérification des bibliothèques requises...\")\n",
+    "\n",
+    "# Vérifier si chaque bibliothèque est installée\n",
+    "for lib in required_libraries:\n",
+    "    try:\n",
+    "        __import__(lib)\n",
+    "        installed_libraries.append(lib)\n",
+    "    except ImportError:\n",
+    "        print(f\"La bibliothèque '{lib}' n'est pas installée. Installation en cours...\")\n",
+    "        os.system(f'{sys.executable} -m pip install {lib}')\n",
+    "        try:\n",
+    "            __import__(lib)\n",
+    "            print(f\"'{lib}' a été installée avec succès.\")\n",
+    "        except ImportError:\n",
+    "            print(f\"Erreur: Impossible d'installer '{lib}'. Veuillez l'installer manuellement avec 'pip install {lib}'.\")\n",
+    "            # Arrêter le script si l'installation échoue\n",
+    "            exit()\n",
+    "\n",
+    "# Re-importer toutes les bibliothèques une fois que tout est prêt\n",
+    "import pandas as pd\n",
+    "import requests\n",
+    "import zipfile\n",
+    "import io\n",
+    "import openpyxl\n",
+    "\n",
+    "print(\"Toutes les bibliothèques requises sont installées et prêtes à être utilisées.\")\n",
+    "print(\"-\" * 50)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9e56fb7b",
+   "metadata": {},
+   "source": [
+    "===========================================================================\n",
+    "Étape 2 : Téléchargement, décompression et prétraitement des données brutes\n",
+    "==========================================================================="
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "061ead67",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Téléchargement et décompression du fichier BF.zip...\n",
+      "Fichier BF.zip décompressé avec succès.\n",
+      "Lecture du fichier BF.txt...\n",
       "Fichier 'burkina_location.csv' créé avec succès.\n",
       "\n",
       "Aperçu des 5 premières lignes du nouveau fichier :\n",
@@ -22,8 +103,73 @@
       "2  2287216           Kéléouoro   9.80748 -4.05023\n",
       "3  2294066         White Volta   8.70194 -0.99056\n",
       "4  2298457        Issana Bouga  10.91667 -1.18333\n",
-      "--------------------------------------------------\n",
-      "Fichier 'gounghin.csv' créé avec les données contenant 'gounghin'.\n",
+      "--------------------------------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "url = 'http://download.geonames.org/export/dump/BF.zip'\n",
+    "print(\"Téléchargement et décompression du fichier BF.zip...\")\n",
+    "\n",
+    "# Télécharger le fichier et l'extraire\n",
+    "try:\n",
+    "    r = requests.get(url, stream=True)\n",
+    "    z = zipfile.ZipFile(io.BytesIO(r.content))\n",
+    "    z.extractall()\n",
+    "    print(\"Fichier BF.zip décompressé avec succès.\")\n",
+    "except requests.exceptions.RequestException as e:\n",
+    "    print(f\"Erreur de téléchargement : {e}\")\n",
+    "    # Arrêter le script si le téléchargement échoue\n",
+    "    exit()\n",
+    "\n",
+    "# Le fichier est délimité par des tabulations et n'a pas d'en-tête.\n",
+    "# Le fichier BF.txt est situé dans le sous-dossier 'BF' après l'extraction.\n",
+    "file_path = os.path.join('BF.txt')\n",
+    "print(f\"Lecture du fichier {file_path}...\")\n",
+    "\n",
+    "# Lire le fichier BF.txt en tant que DataFrame\n",
+    "df_raw = pd.read_csv(file_path, sep='\\t', header=None, encoding='utf-8')\n",
+    "\n",
+    "# Le README de Geonames indique que les colonnes qui nous intéressent sont :\n",
+    "# - geonameid (colonne 0)\n",
+    "# - name (colonne 1)\n",
+    "# - latitude (colonne 4)\n",
+    "# - longitude (colonne 5)\n",
+    "df_filtered = df_raw[[0, 1, 4, 5]].copy()\n",
+    "\n",
+    "# Renommer les colonnes pour une meilleure lisibilité\n",
+    "df_filtered.columns = ['ID', 'location_name', 'lat', 'long']\n",
+    "\n",
+    "# Sauvegarder le DataFrame filtré dans un nouveau fichier CSV\n",
+    "df_filtered.to_csv('burkina_location.csv', index=False, encoding='utf-8')\n",
+    "\n",
+    "print(\"Fichier 'burkina_location.csv' créé avec succès.\")\n",
+    "print(\"\\nAperçu des 5 premières lignes du nouveau fichier :\")\n",
+    "print(df_filtered.head())\n",
+    "print(\"-\" * 50)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9f5dab48",
+   "metadata": {},
+   "source": [
+    "===========================================================================\n",
+    "Étape 3 : Opérations sur le fichier CSV\n",
+    "==========================================================================="
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "025c1b77",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fichier 'gounghin.csv' créé avec les données contenant le nom 'gounghin'.\n",
       "\n",
       "Données pour 'gounghin' :\n",
       "             ID                  location_name       lat     long\n",
@@ -45,159 +191,31 @@
       "2    2287216              Kéléouoro   9.80748 -4.05023\n",
       "4    2298457           Issana Bouga  10.91667 -1.18333\n",
       "137  2353290  Forêt Classée de Ziga  12.47106 -1.08644\n",
-      "--------------------------------------------------\n",
-      "Latitude minimale : 5.21609 (Lieu : ['Komoé'])\n",
-      "Longitude minimale : -5.65968 (Lieu : ['Banifing'])\n",
-      "--------------------------------------------------\n",
-      "Lieux dont les coordonnées sont (lat >= 11 et long <= 0.5) :\n",
-      "             ID location_name       lat     long\n",
-      "5       2353158      Zyonguen  12.36667 -0.45000\n",
-      "6       2353159     Zyiliwèlè  12.38333 -2.73333\n",
-      "7       2353160        Zyanko  12.78333 -0.41667\n",
-      "8       2353161         Zouta  13.14908 -1.28197\n",
-      "9       2353162     Zourtenga  12.95741 -1.28745\n",
-      "...         ...           ...       ...      ...\n",
-      "11953  13494828     Tounougou  11.21462 -0.06965\n",
-      "11954  13494829         Karmé  11.66346  0.08201\n",
-      "11955  13494830     Damdamkom  11.14989  0.43655\n",
-      "11956  13494831       Dazenré  11.43801  0.21293\n",
-      "11957  13494832   Pogoyoaguen  11.44725  0.21074\n",
-      "\n",
-      "[9466 rows x 4 columns]\n",
-      "--------------------------------------------------\n",
-      "Le fichier 'mini_projet.xlsx' a été créé avec succès.\n",
-      "Votre projet est terminé. Vous pouvez maintenant soumettre vos fichiers sur GitHub.\n"
+      "--------------------------------------------------\n"
      ]
     }
    ],
    "source": [
-    "# ==============================================================================\n",
-    "# Mini Projet - Analyse de données du Burkina Faso\n",
-    "# ==============================================================================\n",
-    "# Ce script Python réalise toutes les étapes de l'exercice :\n",
-    "# 1. Prétraitement et filtrage d'un fichier Geonames.org pour le Burkina Faso.\n",
-    "# 2. Analyse et extraction de sous-ensembles de données.\n",
-    "# 3. Consolidation des résultats dans un fichier Excel.\n",
-    "#\n",
-    "# Assurez-vous d'avoir téléchargé et décompressé le fichier BF.zip de Geonames.\n",
-    "# Le fichier BF.txt doit se trouver dans le même répertoire que ce script.\n",
-    "#\n",
-    "# ==============================================================================\n",
     "\n",
-    "# ------------------------------------------------------------------------------\n",
-    "# Étape 1 : Configuration et importation des bibliothèques\n",
-    "# ------------------------------------------------------------------------------\n",
-    "# La bibliothèque 'pandas' est essentielle pour la manipulation de données.\n",
-    "import pandas as pd\n",
-    "import os\n",
-    "import openpyxl\n",
-    "# Pour gérer les fichiers Excel, pandas a besoin de la bibliothèque 'openpyxl'.\n",
-    "# Si vous exécutez ce code dans un environnement comme Jupyter ou Google Colab,\n",
-    "# vous pouvez installer les paquets manquants avec la commande suivante.\n",
-    "\n",
-    "\n",
-    "print(\"Bibliothèques importées avec succès.\")\n",
-    "print(\"-\" * 50)\n",
-    "\n",
-    "\n",
-    "# ------------------------------------------------------------------------------\n",
-    "# Étape 2 : Prétraitement et filtrage des données brutes\n",
-    "# ------------------------------------------------------------------------------\n",
-    "# Nous lisons le fichier BF.txt. Le code ISO du Burkina Faso est 'BF'.\n",
-    "# Le fichier est délimité par des tabulations et n'a pas d'en-tête,\n",
-    "# nous spécifions donc 'sep='\\t'' et 'header=None'.\n",
-    "\n",
-    "# CORRECTION DU CHEMIN DU FICHIER :\n",
-    "# Après décompression, BF.txt se trouve souvent dans un sous-dossier 'BF'.\n",
-    "file_path = os.path.join('BF', 'BF.txt')\n",
-    "print(f\"Lecture du fichier {file_path}...\")\n",
-    "\n",
-    "try:\n",
-    "    df_raw = pd.read_csv(file_path, sep='\\t', header=None, encoding='utf-8')\n",
-    "except FileNotFoundError:\n",
-    "    print(f\"Erreur : Le fichier '{file_path}' n'a pas été trouvé.\")\n",
-    "    print(\"Veuillez vous assurer que vous avez bien décompressé le fichier BF.zip\")\n",
-    "    print(\"et que le fichier BF.txt se trouve dans un sous-dossier nommé 'BF'.\")\n",
-    "    raise # Relève l'erreur pour arrêter l'exécution si le fichier n'est pas trouvé.\n",
-    "\n",
-    "\n",
-    "# Le README de Geonames indique que les colonnes qui nous intéressent sont :\n",
-    "# - geonameid (colonne 0)\n",
-    "# - name (colonne 1)\n",
-    "# - latitude (colonne 4)\n",
-    "# - longitude (colonne 5)\n",
-    "df_filtered = df_raw[[0, 1, 4, 5]].copy()\n",
-    "\n",
-    "# Renommage des colonnes pour les rendre plus lisibles\n",
-    "df_filtered.columns = ['ID', 'location_name', 'lat', 'long']\n",
-    "\n",
-    "# Sauvegarde du DataFrame filtré dans un nouveau fichier CSV\n",
-    "df_filtered.to_csv('burkina_location.csv', index=False, encoding='utf-8')\n",
-    "\n",
-    "print(\"Fichier 'burkina_location.csv' créé avec succès.\")\n",
-    "print(\"\\nAperçu des 5 premières lignes du nouveau fichier :\")\n",
-    "print(df_filtered.head())\n",
-    "print(\"-\" * 50)\n",
-    "\n",
-    "\n",
-    "# ------------------------------------------------------------------------------\n",
-    "# Étape 3 : Opérations sur le fichier CSV\n",
-    "# ------------------------------------------------------------------------------\n",
-    "# Rechargement du fichier CSV pour les analyses suivantes\n",
+    "# Charger le fichier CSV pour les analyses suivantes\n",
     "df_burkina = pd.read_csv('burkina_location.csv')\n",
     "\n",
     "# 3.1 Extraire les données contenant le nom 'gounghin'\n",
-    "# La méthode str.contains() est utilisée pour rechercher la sous-chaîne.\n",
+    "# La méthode str.contains() permet de chercher une sous-chaîne dans la colonne\n",
     "df_gounghin = df_burkina[df_burkina['location_name'].str.contains('gounghin', case=False, na=False)]\n",
     "df_gounghin.to_csv('gounghin.csv', index=False)\n",
-    "print(\"Fichier 'gounghin.csv' créé avec les données contenant 'gounghin'.\")\n",
+    "print(\"Fichier 'gounghin.csv' créé avec les données contenant le nom 'gounghin'.\")\n",
     "print(\"\\nDonnées pour 'gounghin' :\")\n",
     "print(df_gounghin)\n",
     "print(\"-\" * 50)\n",
     "\n",
     "\n",
-    "# 3.2 Extraire les lieux dont les noms commencent par une lettre de 'A' à 'P'\n",
-    "# Nous utilisons .str.upper() pour rendre la comparaison insensible à la casse.\n",
+    "# 3.2 Extraire les lieux dont les premières lettres sont comprises entre 'A' et 'P'\n",
+    "# Utiliser .str.upper() et .between() pour filtrer les noms de lieux\n",
     "df_a_to_p = df_burkina[df_burkina['location_name'].str.upper().str[0].between('A', 'P')]\n",
     "print(\"Aperçu des lieux dont le nom commence par une lettre de 'A' à 'P' :\")\n",
     "print(df_a_to_p.head())\n",
-    "print(\"-\" * 50)\n",
-    "\n",
-    "\n",
-    "# 3.3 Identifier les coordonnées minimales et les noms de lieux correspondants\n",
-    "min_lat = df_a_to_p['lat'].min()\n",
-    "min_long = df_a_to_p['long'].min()\n",
-    "\n",
-    "# Trouver le lieu correspondant à la latitude minimale\n",
-    "lieu_min_lat = df_a_to_p[df_a_to_p['lat'] == min_lat]['location_name'].values\n",
-    "# Trouver le lieu correspondant à la longitude minimale\n",
-    "lieu_min_long = df_a_to_p[df_a_to_p['long'] == min_long]['location_name'].values\n",
-    "\n",
-    "print(f\"Latitude minimale : {min_lat} (Lieu : {lieu_min_lat})\")\n",
-    "print(f\"Longitude minimale : {min_long} (Lieu : {lieu_min_long})\")\n",
-    "print(\"-\" * 50)\n",
-    "\n",
-    "\n",
-    "# 3.4 Quels sont les lieux dont les coordonnées sont (lat >= 11 et long <= 0.5)\n",
-    "df_specific_coords = df_burkina[(df_burkina['lat'] >= 11) & (df_burkina['long'] <= 0.5)]\n",
-    "print(\"Lieux dont les coordonnées sont (lat >= 11 et long <= 0.5) :\")\n",
-    "print(df_specific_coords)\n",
-    "print(\"-\" * 50)\n",
-    "\n",
-    "\n",
-    "# ------------------------------------------------------------------------------\n",
-    "# Étape 4 : Création du fichier Excel final\n",
-    "# ------------------------------------------------------------------------------\n",
-    "# Utilisation de pd.ExcelWriter pour écrire sur plusieurs feuilles dans un seul fichier\n",
-    "with pd.ExcelWriter('mini_projet.xlsx') as writer:\n",
-    "    # Écriture de la feuille 'gounghin'\n",
-    "    df_gounghin.to_excel(writer, sheet_name='gounghin', index=False)\n",
-    "    \n",
-    "    # Écriture de la feuille 'A_to_P'\n",
-    "    df_a_to_p.to_excel(writer, sheet_name='A_to_P', index=False)\n",
-    "\n",
-    "print(\"Le fichier 'mini_projet.xlsx' a été créé avec succès.\")\n",
-    "print(\"Votre projet est terminé. Vous pouvez maintenant soumettre vos fichiers sur GitHub.\")\n"
+    "print(\"-\" * 50)"
    ]
   }
  ],
