--- a/mini_projet_data_analysis.ipynb
+++ b/mini_projet_data_analysis.ipynb
@@ -8,19 +8,20 @@
     "==============================================================================\n",
     "Mini Projet - Analyse de données du Burkina Faso\n",
     "==============================================================================\n",
-    "  Ce script Python réalise toutes les étapes de l'exercice :\n",
-    " 1. Prétraitement et filtrage d'un fichier Geonames.org pour le Burkina Faso.\n",
-    " 2. Analyse et extraction de sous-ensembles de données.\n",
-    " 3. Consolidation des résultats dans un fichier Excel.\n",
+    " 0. Configuration, vérification et importation des bibliothèques \n",
+    " 1. Téléchargement du fichier Geonames.org pour le Burkina Faso.\n",
+    " 2. Prétraitement et filtrage d'un fichier Geonames.org pour le Burkina Faso.\n",
+    " 3. Analyse et extraction de sous-ensembles de données.\n",
+    " 4. Consolidation des résultats dans un fichier Excel.\n",
     "\n",
-    "Étape 1 : Configuration, vérification et importation des bibliothèques\n",
+    "Étape 0 : Configuration, vérification et importation des bibliothèques\n",
     "Ce bloc de code assure que toutes les bibliothèques requises sont installées.\n",
     "L'importation de 'os' est faite en premier pour pouvoir utiliser 'os.system'."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 42,
    "id": "ca4cf47a",
    "metadata": {},
    "outputs": [
@@ -76,14 +77,12 @@
    "id": "9e56fb7b",
    "metadata": {},
    "source": [
-    "===========================================================================\n",
-    "Étape 2 : Téléchargement, décompression et prétraitement des données brutes\n",
-    "==========================================================================="
+    "Étape 1 : Téléchargement, décompression et prétraitement des données brutes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 43,
    "id": "061ead67",
    "metadata": {},
    "outputs": [
@@ -92,18 +91,7 @@
      "output_type": "stream",
      "text": [
       "Téléchargement et décompression du fichier BF.zip...\n",
-      "Fichier BF.zip décompressé avec succès.\n",
-      "Lecture du fichier BF.txt...\n",
-      "Fichier 'burkina_location.csv' créé avec succès.\n",
-      "\n",
-      "Aperçu des 5 premières lignes du nouveau fichier :\n",
-      "        ID       location_name       lat     long\n",
-      "0  2282318              Pouéné   9.72908 -2.78660\n",
-      "1  2285251  Léraba Occidentale  10.28333 -5.11667\n",
-      "2  2287216           Kéléouoro   9.80748 -4.05023\n",
-      "3  2294066         White Volta   8.70194 -0.99056\n",
-      "4  2298457        Issana Bouga  10.91667 -1.18333\n",
-      "--------------------------------------------------\n"
+      "Fichier BF.zip décompressé avec succès.\n"
      ]
     }
    ],
@@ -120,8 +108,42 @@
     "except requests.exceptions.RequestException as e:\n",
     "    print(f\"Erreur de téléchargement : {e}\")\n",
     "    # Arrêter le script si le téléchargement échoue\n",
-    "    exit()\n",
-    "\n",
+    "    exit()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "653865b5",
+   "metadata": {},
+   "source": [
+    "Étape 2 : Prétraitement et filtrage d'un fichier Geonames.org pour le Burkina Faso."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "c5904073",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lecture du fichier BF.txt...\n",
+      "Fichier 'burkina_location.csv' créé avec succès.\n",
+      "\n",
+      "Aperçu des 5 premières lignes du nouveau fichier :\n",
+      "        ID       location_name       lat     long\n",
+      "0  2282318              Pouéné   9.72908 -2.78660\n",
+      "1  2285251  Léraba Occidentale  10.28333 -5.11667\n",
+      "2  2287216           Kéléouoro   9.80748 -4.05023\n",
+      "3  2294066         White Volta   8.70194 -0.99056\n",
+      "4  2298457        Issana Bouga  10.91667 -1.18333\n",
+      "--------------------------------------------------\n"
+     ]
+    }
+   ],
+   "source": [
     "# Le fichier est délimité par des tabulations et n'a pas d'en-tête.\n",
     "# Le fichier BF.txt est situé dans le sous-dossier 'BF' après l'extraction.\n",
     "file_path = os.path.join('BF.txt')\n",
@@ -154,14 +176,12 @@
    "id": "9f5dab48",
    "metadata": {},
    "source": [
-    "===========================================================================\n",
-    "Étape 3 : Opérations sur le fichier CSV\n",
-    "==========================================================================="
+    "Étape 3 : Opérations sur le fichier CSV"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 45,
    "id": "025c1b77",
    "metadata": {},
    "outputs": [
@@ -215,7 +235,41 @@
     "df_a_to_p = df_burkina[df_burkina['location_name'].str.upper().str[0].between('A', 'P')]\n",
     "print(\"Aperçu des lieux dont le nom commence par une lettre de 'A' à 'P' :\")\n",
     "print(df_a_to_p.head())\n",
-    "print(\"-\" * 50)"
+    "print(\"-\" * 50)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "38716df3",
+   "metadata": {},
+   "source": [
+    "Étape 4 : Consolidation des résultats dans un fichier Excel."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "626f0d42",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Le fichier 'mini_projet.xlsx' a été créé avec succès.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Utilisation de pd.ExcelWriter pour écrire sur plusieurs feuilles dans un seul fichier\n",
+    "with pd.ExcelWriter('mini_projet.xlsx') as writer:\n",
+    "    # Écriture de la feuille 'gounghin'\n",
+    "    df_gounghin.to_excel(writer, sheet_name='gounghin', index=False)\n",
+    "\n",
+    "    # Écriture de la feuille 'A_to_P'\n",
+    "    df_a_to_p.to_excel(writer, sheet_name='A_to_P', index=False)\n",
+    "\n",
+    "print(\"Le fichier 'mini_projet.xlsx' a été créé avec succès.\")"
    ]
   }
  ],
