--- a/mini_projet_data_analysis.ipynb
+++ b/mini_projet_data_analysis.ipynb
@@ -5,15 +5,19 @@
    "id": "bc050a43",
    "metadata": {},
    "source": [
-    "==============================================================================\n",
-    "Mini Projet - Analyse de données du Burkina Faso\n",
-    "==============================================================================\n",
+    "# Mini Projet - Analyse de données du Burkina Faso\n",
     " 0. Configuration, vérification et importation des bibliothèques \n",
     " 1. Téléchargement du fichier Geonames.org pour le Burkina Faso.\n",
     " 2. Prétraitement et filtrage d'un fichier Geonames.org pour le Burkina Faso.\n",
     " 3. Analyse et extraction de sous-ensembles de données.\n",
-    " 4. Consolidation des résultats dans un fichier Excel.\n",
-    "\n",
+    " 4. Consolidation des résultats dans un fichier Excel."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c5103b55",
+   "metadata": {},
+   "source": [
     "Étape 0 : Configuration, vérification et importation des bibliothèques\n",
     "Ce bloc de code assure que toutes les bibliothèques requises sont installées.\n",
     "L'importation de 'os' est faite en premier pour pouvoir utiliser 'os.system'."
@@ -21,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 47,
    "id": "ca4cf47a",
    "metadata": {},
    "outputs": [
@@ -82,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 48,
    "id": "061ead67",
    "metadata": {},
    "outputs": [
@@ -121,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 49,
    "id": "c5904073",
    "metadata": {},
    "outputs": [
@@ -181,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 50,
    "id": "025c1b77",
    "metadata": {},
    "outputs": [
@@ -248,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 51,
    "id": "626f0d42",
    "metadata": {},
    "outputs": [
